Resolve overflow-x at Portfolio, and overflow at Home due to too hight project pics

--- a/src/assets/styles/_global.styl
+++ b/src/assets/styles/_global.styl
@@ -4,10 +4,12 @@
 
 html, body {
   width 100%
+  max-width 100vw
   height 100%
   margin 0
   padding 0
   overflow-y scroll
+  overflow-x hidden
 
   font-family: 'Montserrat', sans-serif;
   background backgroundColor
